# beam

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile.ubi  Dockerfile  LOCAL_DEVELOPMENT.md  README.md  ai-rules.md  beam.xml  demo.md  deny.toml  docker-compose.yml  flake.nix  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-deploy.yml  ci.yml  docker-publish.yml
assets/shared-assets/shared-rust/shared-backend/src/server/: error.rs
backend/: Cargo.toml
backend/debian/: changelog  postinst  postrm  prerm
backend/src/: config.rs  main.rs  pwa.rs  security.rs  services.rs  state.rs  tests.rs  utils.rs
backend/src/middleware/: mod.rs  security.rs  static_files.rs
backend/src/routes/: auth.rs  mod.rs
backend/src/routes/auth/: logout.rs  mod.rs  pin_required.rs  verify_pin.rs
backend/src/routes/files/: helpers.rs  mod.rs  ops.rs
backend/src/routes/files/helpers/: mod.rs  tests.rs
backend/src/routes/files/ops/: delete.rs  download.rs  mod.rs  rename.rs
backend/src/routes/upload/: cancel.rs  chunk.rs  chunk_validation.rs  init.rs  metadata.rs  mod.rs  utils.rs
backend/src/routes/upload/chunk/: helpers.rs  mod.rs
backend/src/services/: mod.rs
backend/src/tests/: mock_services.rs  mod.rs  security.rs
backend/src/utils/: misc.rs  mod.rs  path.rs
backend/tests/: container_smoke.rs
docs/: BIND_MOUNT_FIX.md
frontend/: Cargo.toml  index.html
frontend/Assets/: app.css  base.css  header.css  service-worker.js
frontend/src/: api.rs  app.rs  client_helpers.rs  footer.rs  header.rs  i18n.rs  js_api.rs  main.rs  storage.rs  types.rs  utils.rs
frontend/src/app/: mod.rs  update_config.rs  update_files.rs  update_pin.rs  update_toast.rs  update_upload.rs  upload_task.rs  view.rs
frontend/src/app/view/: explorer.rs  mod.rs  pin_entry.rs  uploader.rs
frontend/src/components/: explorer.rs  mod.rs  uploader.rs
frontend/src/i18n/: de.rs  en.rs  es.rs  fr.rs  ja.rs  pt.rs  ru.rs  zh.rs
public/: service-worker.js  styles.css
test/: auth.test.js  path-validation.test.js
