[package]
name = "backend"
version = "3.0.27"
edition = "2024"
authors = ["etecoons"]
license = "Apache-2.0"
repository = "https://github.com/etecoons/Beam"
homepage = "https://github.com/etecoons/Beam"
description = "Axum backend service for Beam."
readme = "../README.md"

[dependencies]
shared-core = { git = "https://github.com/etecoons/shared-assets.git", tag = "v3.0.28" }
shared-backend = { git = "https://github.com/etecoons/shared-assets.git", tag = "v3.0.28" }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "net", "fs", "time", "sync"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["fs", "limit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
axum-extra = { version = "0.12", features = ["cookie"] }
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
percent-encoding = "2.3"
sha2 = "0.11"
constant_time_eq = "0.3"
ipnet = "2.9"