[package]
name = "backend"
version = "1.0.17"
edition = "2024"
authors = ["studio2201"]
license = "Apache-2.0"
repository = "https://github.com/studio2201/beam"
homepage = "https://github.com/studio2201/beam"
description = "Axum backend service for Beam."
readme = "../README.md"

[dependencies]
shared-core = { git = "https://github.com/UberMetroid/shared-assets.git", tag = "v3.0.29" }
shared-backend = { git = "https://github.com/UberMetroid/shared-assets.git", tag = "v3.0.29" }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "net", "fs", "time", "sync"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.7.0", features = ["fs", "limit", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
axum-extra = { version = "0.12", features = ["cookie"] }
rand = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
percent-encoding = "2.3"
sha2 = "0.11"
constant_time_eq = "0.5"
ipnet = "2.9"
[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
