[package]
name = "frontend"
version = "1.2.1"
edition = "2024"
authors = ["UberMetroid <admin@ubermetroid.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/UberMetroid/RustDrop"
homepage = "https://github.com/UberMetroid/RustDrop"
description = "Yew frontend application for RustDrop."
readme = "../README.md"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.5"
gloo-utils = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlButtonElement",
  "DragEvent",
  "DataTransfer",
  "DataTransferItem",
  "DataTransferItemList",
  "File",
  "FileList",
  "FileReader",
  "Blob",
  "Window",
  "Document",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Storage",
  "ProgressEvent",
  "Event",
  "InputEvent",
  "MouseEvent",
  "KeyboardEvent",
  "FocusEvent",
  "Location",
  "ClipboardEvent",
  "Performance",
  "MediaQueryList",
  "Navigator",
  "HtmlSelectElement",
]
