[package]
name = "frontend"
version = "3.0.27"
edition = "2024"
authors = ["etecoons"]
license = "Apache-2.0"
repository = "https://github.com/etecoons/Beam"
homepage = "https://github.com/etecoons/Beam"
description = "Yew frontend application for Beam."
readme = "../README.md"

[dependencies]
yew = { version = "0.23.0", features = ["csr"] }
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "=0.4.71"
js-sys = "=0.3.98"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.7"
gloo-utils = "0.3"
gloo-timers = { version = "0.4", features = ["futures"] }
shared-frontend = { git = "https://github.com/etecoons/shared-assets.git", tag = "v3.0.28" }
shared-core = { git = "https://github.com/etecoons/shared-assets.git", tag = "v3.0.28" }

[dependencies.web-sys]
version = "3.0.27"
features = [
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlButtonElement",
  "DragEvent",
  "DataTransfer",
  "DataTransferItem",
  "DataTransferItemList",
  "File",
  "FileList",
  "FileReader",
  "Blob",
  "Window",
  "Document",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Storage",
  "ProgressEvent",
  "Event",
  "InputEvent",
  "MouseEvent",
  "KeyboardEvent",
  "FocusEvent",
  "Location",
  "ClipboardEvent",
  "Performance",
  "MediaQueryList",
  "Navigator",
  "HtmlSelectElement",
]
